# path-following-datasets

./: .gitignore  DockerFile  Dockerfile  README.md  install_dependencies_ros.sh  install_dependencies_ros_melodic.sh  install_dependencies_ros_noetic.sh  mpc_environment.yml  py2_requirements_ros.txt  py2_requirements_ros_melodic.txt  py3_requirements_ros_noetic.txt  requirements.txt  supervisord.conf  vehicle_params.yaml
examples/: runSimulator.sh
examples/car_ws/devel/: .catkin  (+8 more)
examples/car_ws/src/motion_planner/: CMakeLists.txt  package.xml
examples/car_ws/src/motion_planner/Map/: MapParam_ParkingLot.yaml  MapParam_ParkingLot_Above3m.yaml  MapParam_ParkingLot_Above3mBoundary.yaml  MapParam_ParkingLot_RoadMarker.yaml  MapParam_ParkingLot_RoadMarkerAndAbove3m.yaml  MapParam_ParkingLot_RoadMarkerAndAbove3mBoundary.yaml
examples/car_ws/src/motion_planner/cfg/: lattice.rviz  motion_planner.yaml  motion_planner_fortest.yaml  rviz_golfcart_navigation_drlmpc.rviz
examples/car_ws/src/motion_planner/launch/: motion_planner.launch  motion_planner_optimized.launch  rviz_golfcart.launch
examples/car_ws/src/motion_planner/msg/: local_path.msg
examples/car_ws/src/motion_planner/scripts/: LaticePlanner.py  MotionPlannerNode.py  PathVisualizer.py  RobotMarkerVisualizer.py
examples/car_ws/src/motion_planner/scripts/CurvesGenerator/: cubic_spline.py  quartic_polynomial.py  quartic_polynomial_numba.py  quintic_polynomial.py  quintic_polynomial_numba.py
examples/car_ws/src/motion_planner/scripts/Helper/: GazeboHelper.py  GoalCheckerandGetter.py  PathSaver.py  PathUtils.py
(+2362 files in other folders)
