<?xml version="1.0"?>
<package format="2">
  <name>motion_planner</name>
  <version>0.0.0</version>
  <description>The Motion Planner</description>

  <maintainer email="gkourosg@yahoo.gr">George Kouros</maintainer>

  <license>GPLv3</license>

  <author email="gkourosg@yahoo.gr">George Kouros</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>ackermann_msgs</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>generate_messages</depend>

  <export>
  </export>
</package>
